@@ -9,4 +9,4 @@
 2 3
 0 6
 7 5
-0 2 2 2 0 0 0 2 1 1 0 0 2 2 1 1 0 2 1 3 1 2 1 4 4 4 1 4 4 1 1 4 1 1
+0 2 3 3 0 0 0 3 1 1 0 0 3 3 1 1 0 2 1 2 1 2 1 4 4 4 1 4 4 1 1 4 1 1
